--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -1,83 +1,183 @@
-Login.css
-
 .login-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
-.image-container {
   flex: 1;
-  max-width: 50%;
-}
+  width: 100vw;
 
- .image-container img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+
 }
 
 .form-container {
   flex: 1;
-  max-width: 50%;
-  padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
-  background-color: #fff;
+  padding: 50px;
+  margin: 10px;
+  /* margin-left: -50px; */
+  align-content: center;
+
+
+
 }
 
-.form-container form {
-  display: flex;
-  flex-direction: column;
+.form-box {
+  justify-content: left;
+  align-items: inherit;
+  grid-row: auto;
+}
+
+.Twitter-img {
+  color: skyblue;
+  max-width: 50%;
+
+}
+
+.input-form {
+  width: 20px;
+
+}
+
+.heading,
+h1 {
+  font-size: 50px
+}
+
+.heading1,
+h3 {
+  font-size: 35px;
+
+  justify-content: end
+}
+
+
+.image-container {
+  flex: 2;
+  margin-left: -100px;
+
+
+}
+
+.image {
+  max-width: 100%;
+  height: 100%;
+  /* margin-left: -50px; */
+
+
+
+}
+
+input {
+  display: grid;
+  margin-bottom: 1px;
+  padding: 5px;
+  background-color: white;
+  margin-top: 20px;
+
 }
 
 .email,
 .password {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+
+  background-color: #E8F0FE;
+  width: 70%;
+  border-radius: 8px;
+  padding: 14px;
+  border: none;
+  outline: none;
 }
 
+.display-name {
+
+
+  background-color: #E8F0FE;
+  width: 70%;
+  border-radius: 8px;
+  padding: 14px;
+  border: none;
+  outline: none;
+
+}
+
+
+
+
 .btn-login {
-  text-align: center;
+  padding: 7px;
 }
 
 .btn {
-  background-color: #1da1f2;
-  color: #fff;
-  padding: 10px 20px;
+  background-color: rgb(92, 199, 241);
+  width: 75%;
+  margin-right: 20px;
+  padding: 14px;
+  border-radius: 8px;
+  font-size: 17px;
   border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.btn:hover {
-  background-color: #0d8bf9;
-}
-
-.google-button {
-  text-align: center;
-  margin-top: 20px;
+  outline: none;
+  margin-bottom: 20px;
+  margin-top: 15px;
 }
 
 .g-btn {
-  margin-top: 10px;
+  border: 1px solid;
+  height: 40px !important;
+  line-height: 40px !important;
+  font-size: 15px !important;
+  width: 70% !important;
+  margin: 10px;
 }
 
-.create-account {
-  text-align: center;
-  margin-top: 20px;
+.google-button {
+  margin-top: 5%;
 }
 
-.create-account a {
-  color: #1da1f2;
+.g-btn>div,
+.g-btn>div>svg {
+  height: 30px !important;
+
+}
+
+.errorMessage {
+  color: red;
+  font-weight: 500;
+  margin: 10px 0;
+}
+
+.signUpText>Link {
   text-decoration: none;
-  font-weight: bold;
+  color: var(--twitter-color) !important;
+
 }
 
-.create-account a:hover {
-  text-decoration: underline;
-}  
+@media screen and (max-width:688px) {
+  .login-container {
+      order: 2;
+      display: flex;
+      flex-direction: column;
+      font-size: 20px;
+
+  }
+
+  .form-container {
+      padding: 10px;
+  }
+
+
+  .image-container {
+      width: 100%;
+      vertical-align: text-bottom;
+      display: flex;
+      flex-direction: column-reverse;
+      order: 1;
+      max-width: 100%;
+      width: 100%;
+
+
+  }
+
+
+  .image {
+      order: 2;
+      width: 100%;
+      height: 100%;
+      margin-left: 100px;
+
+  }
+}
